test/success/implicit_conversions/implicit_ref/main.sk
module Main {

struct Foo {
    value: Int
}

fn foo(f: &Foo) {
    assert(f.value == 42);
}

fn main() {
    let f : Foo = Foo(42);
    foo(f);
}

}