test/errors/dropcheck/already_moved_ref/main.sk
module Main {

class Foo {

}

fn value(f: Foo) {

}

fn ref(f: &Foo) {

}

fn main() {
    let f = Foo();
    value(f);
    ref(&f);
}

}